登录模块与注册模块模板样式完成

--- a/src/layout/nav/Nav.scss
+++ b/src/layout/nav/Nav.scss
@@ -10,5 +10,6 @@
         border-radius: 4px; color: #666; padding: 10px 0;
         box-shadow: 0 2px 8px rgba(0,0,0,.1); text-align: center;
     }
+    // a{font-size: 17px; line-height: 28px;}
     img{vertical-align: middle;}
 }
